--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -116,45 +116,52 @@ bind=SUPER_SHIFT,DELETE,exit,
 # 登出界面	
 bind=CONTROL_ALT,DELETE,exec,wlogout	
 # 调用出焦点窗口
-bind=SUPER,V,togglefloating,	
+bind=SUPER,O,togglefloating,	
 # 缩小焦点窗口	
 bind=SUPER,P,fullscreen			
 # 资源管理器
-bind=SUPER,E,exec,nemo		
-# 启动idea  9
+bind=SUPER,E,exec,nemo
+
+# $scripts/bin/focus-window.sh 第一个参数是bin应用启动 第二个参数是窗口的class 第三个参数是窗口位置
+# 窗口的class 使用： hyprctl clients 命令查询
+# 启动typora
+bind=SUPER_SHIFT,M,exec,typora
+bind=SUPER,M,exec,bash $scripts/bin/focus-window.sh typora Typora 60
+# 启动idea
 bind=SUPER-SHIFT,I,exec,intellij-idea-ultimate-edition 
 bind=SUPER,I,exec,bash $scripts/bin/focus-window.sh intellij-idea-ultimate-edition jetbrains 61	
-# 启动edge  12
+# 启动edge
 bind=SUPER_SHIFT,L,exec,microsoft-edge-stable			
 bind=SUPER,L,exec,bash $scripts/bin/focus-window.sh microsoft-edge-stable Microsoft-edge 62
-# 启动typora    15
-bind=SUPER_SHIFT,M,exec,typora
-bind=SUPER,M,exec,bash $scripts/bin/focus-window.sh typora Typora 63
-# 启动chrome    18
+# 启动vs code
+bind=SUPER_SHIFT,V,exec,code			
+bind=SUPER,V,exec,bash $scripts/bin/focus-window.sh code Code 63
+# 启动chrome
 bind=SUPER_SHIFT,C,exec,google-chrome-stable 	
 bind=SUPER,C,exec,bash $scripts/bin/focus-window.sh google-chrome-stable Google-chrome 64
-# 启动Telemgram 21
+# 启动Telemgram
 bind=SUPER_SHIFT,T,exec,telegram-desktop		
 bind=SUPER,T,exec,bash $scripts/bin/focus-window.sh telegram-desktop telegramdesktop 65
-# 启动TIM   24
+# 启动网易云
+bind=SUPER_SHIFT,N,exec,netease-cloud-music	
+bind=SUPER,N,exec,bash $scripts/bin/focus-window.sh netease-cloud-music netease-cloud-music 66
+# 启动TIM
 bind=SUPER_SHIFT,U,exec,/opt/apps/com.qq.tim.spark/files/run.sh
-bind=SUPER,U,exec,bash $scripts/bin/focus-window.sh /opt/apps/com.qq.tim.spark/files/run.sh Wine 66
+bind=SUPER,U,exec,bash $scripts/bin/focus-window.sh /opt/apps/com.qq.tim.spark/files/run.sh Wine 67
 
 # 程序启动器
 # bind=SUPER,R,exec,wofi --show drun -o DP-3		
 # 打开程序启动器
 bindr=SUPER,W,exec,bash $scripts/bin/app-switch.sh $HOME/.config/rofi/launchers/type-2/launcher.sh rofi
 
-# 桌面编号
-# 
-
 
 # 缩放窗口
-bind=SUPER,O,pseudo,
+# bind=SUPER,O,pseudo,
 binde=SUPER,J,resizeactive,-25 0
 binde=SUPER,K,resizeactive,25 0
 binde=SUPER_SHIFT,J,resizeactive,0 -20
 binde=SUPER_SHIFT,K,resizeactive,0 20
+
 
 # 焦点转换
 bind=SUPER,up,movefocus,u
