--- a/waybar/config
+++ b/waybar/config
@@ -29,12 +29,14 @@
             "4": "",
             "5": "",
             "6": "",
+            "60": " M",
             "61": " I",
-            "62": " L",
-            "63": " M",
+            "62": " L",
+            "63": " V",
             "64": " C",
             "65": " T",
-            "66": " U",
+            "66": " N",
+            "67": "ﬄ U",
             "default":" "
         }, 
         "sort-by-number": true
@@ -89,7 +91,7 @@
         "show-passive-items": true
     },
     "clock": {
-        "format": "{: %I:%M %p   %d/%m/%Y}"
+        "format": "{: %p%I:%M  %m/%d}"
     },
     "cpu": {
         "interval": 15,
