--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -89,6 +89,7 @@ exec-once=hyprctl setcursor oreo_nord_snow_1_cursors 32
 # 启动
 exec-once=fcitx5
 exec-once=waybar
+exec-once=clash-verge
 #exec-once=flameshot
 # 启动所有的自定义脚本
 exec-once=$scripts/*.sh
